addons/elk/elasticsearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elk
  namespace: elk
spec:
  selector:
    app: elasticsearch
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9200
  type: ClusterIP
