addons/elk/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elk
  namespace: elk
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:965244704449:certificate/a597dcc9-436a-4ea4-91d8-7de593940b5c
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/group.name: dev
spec:
  ingressClassName: alb
  rules:
    - host: elk.965244704449.realhandsonlabs.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elk
                port:
                  number: 80
